objects/Routing_logic__c.object
<CustomObject>
    <fields>
        <fullName>Error_message__c</fullName>
        <label>Error message</label>
        <picklist>
            <picklistValues>
                <fullName>You must select ready for resolution to close the case</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_to_step__c</fullName>
        <label>Go to step</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_Step_on_Render__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move Step on Render</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Order__c</fullName>
        <description>Use this field to order the dynamic section logics</description>
        <label>Page Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Section__c</fullName>
        <label>Parent Section</label>
        <picklist>
            <picklistValues>
                <fullName>Section 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_Render_Block__c</fullName>
        <label>Re-Render Block</label>
        <picklist>
            <picklistValues>
                <fullName>PBlock01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBlock11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>Lookup to Step that this logic is for</description>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Routing_logics</relationshipLabel>
        <relationshipName>Routing_logics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Section_Fieldset__c</fullName>
        <label>Sub Section Fieldset</label>
        <type>TextArea</type>
    </fields>
    <label>Routing logic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Routing Logic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing_logics</pluralLabel>
    <recordTypes>
        <fullName>Dynamic_Routing_Logic</fullName>
        <active>true</active>
        <label>Dynamic Routing Logic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dynamic_Section_Logic</fullName>
        <active>true</active>
        <label>Dynamic Section Logic</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>